--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "eslint": "^8.26.0",
+    "history": "5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2",
+    "react-router": "^6.4.2",
+    "react-router-dom": "6",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "react-use-navigate": "^0.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
