--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "eslint": "^8.26.0",
     "history": "5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "moment-timezone-data-webpack-plugin": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-router": "^6.4.2",
     "react-router-dom": "6",
     "react-script": "^2.0.5",
