--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "react-use-navigate": "^0.1.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
